added CSS formatting to bomb/boomerang/buccaneer html files via adding relevant class attributes. Also added cell text-wrapping to upgrade tables

--- a/boomerang.html
+++ b/boomerang.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Improved Rangs</th>
-                    <th>Glaives</th>
-                    <th>Glaive Ricochet</th>
-                    <th>MOAR Glaives</th>
-                    <th>Glaive Lord</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$200</td>
-                    <td>$280</td>
-                    <td>$600</td>
-                    <td>$2,000</td>
-                    <td>$32,500</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Improved Rangs</th>
+                        <th class="top_row">Glaives</th>
+                        <th class="top_row">Glaive Ricochet</th>
+                        <th class="top_row">MOAR Glaives</th>
+                        <th class="top_row">Glaive Lord</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$200</td>
+                        <td>$280</td>
+                        <td>$600</td>
+                        <td>$2,000</td>
+                        <td>$32,500</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Faster Throwing</th>
+                        <th class="top_row">Faster Rangs</th>
+                        <th class="top_row">Bionic Boomerang</th>
+                        <th class="top_row">Turbo Charge</th>
+                        <th class="top_row">Perma Charge</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$175</td>
+                        <td>$250</td>
+                        <td>$1,250</td>
+                        <td>$4,200</td>
+                        <td>$35,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Faster Throwing</th>
-                    <th>Faster Rangs</th>
-                    <th>Bionic Boomerang</th>
-                    <th>Turbo Charge</th>
-                    <th>Perma Charge</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$175</td>
-                    <td>$250</td>
-                    <td>$1,250</td>
-                    <td>$4,200</td>
-                    <td>$35,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Long Range Rangs</th>
-                    <th>Red Hot Rangs</th>
-                    <th>Kylie Boomerang</th>
-                    <th>MOAB Press</th>
-                    <th>MOAB Domination</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$100</td>
-                    <td>$300</td>
-                    <td>$1,300</td>
-                    <td>$2,400</td>
-                    <td>$50,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Long Range Rangs</th>
+                        <th class="top_row">Red Hot Rangs</th>
+                        <th class="top_row">Kylie Boomerang</th>
+                        <th class="top_row">MOAB Press</th>
+                        <th class="top_row">MOAB Domination</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$100</td>
+                        <td>$300</td>
+                        <td>$1,300</td>
+                        <td>$2,400</td>
+                        <td>$50,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="primary tower_heading">
