--- a/bomb.html
+++ b/bomb.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -62,102 +64,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Bigger Bombs</th>
-                    <th>Heavy Bombs</th>
-                    <th>Really Big Bombs</th>
-                    <th>Bloon Impact</th>
-                    <th>Bloon Crush</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$250</td>
-                    <td>$650</td>
-                    <td>$1,100</td>
-                    <td>$2,800</td>
-                    <td>$55,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Bigger Bombs</th>
+                        <th class="top_row">Heavy Bombs</th>
+                        <th class="top_row">Really Big Bombs</th>
+                        <th class="top_row">Bloon Impact</th>
+                        <th class="top_row">Bloon Crush</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$250</td>
+                        <td>$650</td>
+                        <td>$1,100</td>
+                        <td>$2,800</td>
+                        <td>$55,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Faster Reload</th>
+                        <th class="top_row">Missile Launcher</th>
+                        <th class="top_row">MOAB Mauler</th>
+                        <th class="top_row">MOAB Assassin</th>
+                        <th class="top_row">MOAB Eliminator</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$250</td>
+                        <td>$400</td>
+                        <td>$1,000</td>
+                        <td>$3,450</td>
+                        <td>$28,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Faster Reload</th>
-                    <th>Missile Launcher</th>
-                    <th>MOAB Mauler</th>
-                    <th>MOAB Assassin</th>
-                    <th>MOAB Eliminator</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$250</td>
-                    <td>$400</td>
-                    <td>$1,000</td>
-                    <td>$3,450</td>
-                    <td>$28,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Extra Range</th>
-                    <th>Frag Bombs</th>
-                    <th>Cluster Bombs</th>
-                    <th>Recursive Cluster</th>
-                    <th>Bomb Blitz</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$200</td>
-                    <td>$300</td>
-                    <td>$700</td>
-                    <td>$2,700</td>
-                    <td>$23,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Extra Range</th>
+                        <th class="top_row">Frag Bombs</th>
+                        <th class="top_row">Cluster Bombs</th>
+                        <th class="top_row">Recursive Cluster</th>
+                        <th class="top_row">Bomb Blitz</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$200</td>
+                        <td>$300</td>
+                        <td>$700</td>
+                        <td>$2,700</td>
+                        <td>$23,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="primary tower_heading">
