--- a/buccaneer.html
+++ b/buccaneer.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Faster Shooting</th>
-                    <th>Double Shot</th>
-                    <th>Destroyer</th>
-                    <th>Aircraft Carrier</th>
-                    <th>Carrier Flagship</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$275</td>
-                    <td>$425</td>
-                    <td>$3,050</td>
-                    <td>$8,000</td>
-                    <td>$24,500</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Faster Shooting</th>
+                        <th class="top_row">Double Shot</th>
+                        <th class="top_row">Destroyer</th>
+                        <th class="top_row">Aircraft Carrier</th>
+                        <th class="top_row">Carrier Flagship</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$275</td>
+                        <td>$425</td>
+                        <td>$3,050</td>
+                        <td>$8,000</td>
+                        <td>$24,500</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Grape Shot</th>
+                        <th class="top_row">Hot Shot</th>
+                        <th class="top_row">Cannon Ship</th>
+                        <th class="top_row">Monkey Pirates</th>
+                        <th class="top_row">Pirate Lord</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$550</td>
+                        <td>$500</td>
+                        <td>$900</td>
+                        <td>$3,900</td>
+                        <td>$27,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Grape Shot</th>
-                    <th>Hot Shot</th>
-                    <th>Cannon Ship</th>
-                    <th>Monkey Pirates</th>
-                    <th>Pirate Lord</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$550</td>
-                    <td>$500</td>
-                    <td>$900</td>
-                    <td>$3,900</td>
-                    <td>$27,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Long Range</th>
-                    <th>Crow's Nest</th>
-                    <th>Merchantman</th>
-                    <th>Favored Trades</th>
-                    <th>Trade Empire</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$200</td>
-                    <td>$350</td>
-                    <td>$2,400</td>
-                    <td>$5,500</td>
-                    <td>$23,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Long Range</th>
+                        <th class="top_row">Crow's Nest</th>
+                        <th class="top_row">Merchantman</th>
+                        <th class="top_row">Favored Trades</th>
+                        <th class="top_row">Trade Empire</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$200</td>
+                        <td>$350</td>
+                        <td>$2,400</td>
+                        <td>$5,500</td>
+                        <td>$23,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="military tower_heading">
