added CSS formatting to dart/dartling/desperado html files via adding relevant class attributes. Also centered text in table cells

--- a/dart.html
+++ b/dart.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Sharp Shots</th>
-                    <th>Razor Sharp Shots</th>
-                    <th>Spike-o-pult</th>
-                    <th>Juggernaut</th>
-                    <th>Ultra-Juggernaut</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$140</td>
-                    <td>$200</td>
-                    <td>$320</td>
-                    <td>$1,800</td>
-                    <td>$15,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Sharp Shots</th>
+                        <th class="top_row">Razor Sharp Shots</th>
+                        <th class="top_row">Spike-o-pult</th>
+                        <th class="top_row">Juggernaut</th>
+                        <th class="top_row">Ultra-Juggernaut</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$140</td>
+                        <td>$200</td>
+                        <td>$320</td>
+                        <td>$1,800</td>
+                        <td>$15,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Quick Shots</th>
+                        <th class="top_row">Very Quick Shots</th>
+                        <th class="top_row">Triple Shot</th>
+                        <th class="top_row">Super Monkey Fan Club</th>
+                        <th class="top_row">Plasma Monkey Fan Club</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$100</td>
+                        <td>$190</td>
+                        <td>$450</td>
+                        <td>$7,200</td>
+                        <td>$45,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Quick Shots</th>
-                    <th>Very Quick Shots</th>
-                    <th>Triple Shot</th>
-                    <th>Super Monkey Fan Club</th>
-                    <th>Plasma Monkey Fan Club</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$100</td>
-                    <td>$190</td>
-                    <td>$450</td>
-                    <td>$7,200</td>
-                    <td>$45,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Long Range Darts</th>
-                    <th>Enhanced Eyesight</th>
-                    <th>Crossbow</th>
-                    <th>Sharpshooter</th>
-                    <th>Crossbow Master</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$90</td>
-                    <td>$200</td>
-                    <td>$575</td>
-                    <td>$2,050</td>
-                    <td>$21,500</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Long Range Darts</th>
+                        <th class="top_row">Enhanced Eyesight</th>
+                        <th class="top_row">Crossbow</th>
+                        <th class="top_row">Sharpshooter</th>
+                        <th class="top_row">Crossbow Master</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$90</td>
+                        <td>$200</td>
+                        <td>$575</td>
+                        <td>$2,050</td>
+                        <td>$21,500</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="primary tower_heading">
