--- a/dartling.html
+++ b/dartling.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Focused Firing</th>
-                    <th>Laser Shock</th>
-                    <th>Laser Cannon</th>
-                    <th>Plasma Accelerator</th>
-                    <th>Ray of Doom</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$300</td>
-                    <td>$900</td>
-                    <td>$3,000</td>
-                    <td>$11,750</td>
-                    <td>$75,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Focused Firing</th>
+                        <th class="top_row">Laser Shock</th>
+                        <th class="top_row">Laser Cannon</th>
+                        <th class="top_row">Plasma Accelerator</th>
+                        <th class="top_row">Ray of Doom</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$300</td>
+                        <td>$900</td>
+                        <td>$3,000</td>
+                        <td>$11,750</td>
+                        <td>$75,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Advanced Targeting</th>
+                        <th class="top_row">Faster Barrel Spin</th>
+                        <th class="top_row">Hydra Rocket Pods</th>
+                        <th class="top_row">Rocket Storm</th>
+                        <th class="top_row">M.A.D.</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$250</td>
+                        <td>$950</td>
+                        <td>$4,500</td>
+                        <td>$5,850</td>
+                        <td>$65,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Advanced Targeting</th>
-                    <th>Faster Barrel Spin</th>
-                    <th>Hydra Rocket Pods</th>
-                    <th>Rocket Storm</th>
-                    <th>M.A.D.</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$250</td>
-                    <td>$950</td>
-                    <td>$4,500</td>
-                    <td>$5,850</td>
-                    <td>$65,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Faster Swivel</th>
-                    <th>Powerful Darts</th>
-                    <th>Buckshot</th>
-                    <th>Bloon Area Denial System</th>
-                    <th>Bloon Exclusion Zone</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$150</td>
-                    <td>$1,200</td>
-                    <td>$3,400</td>
-                    <td>$12,000</td>
-                    <td>$58,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Faster Swivel</th>
+                        <th class="top_row">Powerful Darts</th>
+                        <th class="top_row">Buckshot</th>
+                        <th class="top_row">Bloon Area Denial System</th>
+                        <th class="top_row">Bloon Exclusion Zone</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$150</td>
+                        <td>$1,200</td>
+                        <td>$3,400</td>
+                        <td>$12,000</td>
+                        <td>$58,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="military tower_heading">
