--- a/desperado.html
+++ b/desperado.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Quickdraw</th>
-                    <th>Standoff</th>
-                    <th>Big Iron</th>
-                    <th>Twin Sixes</th>
-                    <th>The Blazing Sun</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$200</td>
-                    <td>$200</td>
-                    <td>$1,200</td>
-                    <td>$4,800</td>
-                    <td>$17,500</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Quickdraw</th>
+                        <th class="top_row">Standoff</th>
+                        <th class="top_row">Big Iron</th>
+                        <th class="top_row">Twin Sixes</th>
+                        <th class="top_row">The Blazing Sun</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$200</td>
+                        <td>$200</td>
+                        <td>$1,200</td>
+                        <td>$4,800</td>
+                        <td>$17,500</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Eagle Eye</th>
+                        <th class="top_row">Bullseye</th>
+                        <th class="top_row">Deadeye</th>
+                        <th class="top_row">Bounty Hunter</th>
+                        <th class="top_row">Golden Justice</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$150</td>
+                        <td>$350</td>
+                        <td>$3,000</td>
+                        <td>$6,500</td>
+                        <td>$42,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Eagle Eye</th>
-                    <th>Bullseye</th>
-                    <th>Deadeye</th>
-                    <th>Bounty Hunter</th>
-                    <th>Golden Justice</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$150</td>
-                    <td>$350</td>
-                    <td>$3,000</td>
-                    <td>$6,500</td>
-                    <td>$42,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Wanderer</th>
-                    <th>Nomad</th>
-                    <th>Enforcer</th>
-                    <th>Avenger</th>
-                    <th>The Desert Phantom</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$220</td>
-                    <td>$280</td>
-                    <td>$2,100</td>
-                    <td>$9,500</td>
-                    <td>$31,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Wanderer</th>
+                        <th class="top_row">Nomad</th>
+                        <th class="top_row">Enforcer</th>
+                        <th class="top_row">Avenger</th>
+                        <th class="top_row">The Desert Phantom</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$220</td>
+                        <td>$280</td>
+                        <td>$2,100</td>
+                        <td>$9,500</td>
+                        <td>$31,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="primary tower_heading">
